--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.2",
     "crypto-js": "^4.1.1",
     "eslint": "^8.31.0",
+    "fetch-intercept": "^2.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
