--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "fetch-intercept": "^2.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
